fixed vertical spacing of table

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -76,6 +76,7 @@ hr {
     border: 2px solid $gray-dark;
     td:nth-child(1), td:nth-child(2) {  
       padding-top: 12px;
+      padding-left: 10px;
     }
     a {
       text-decoration: none;
